--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             if (chk != null) return chk;
             var cvs = conversion(u,t);
 			   
-			   alert("Temperature is "+t1+" in "+u1);
-			});
+			document.getElementById("result").innerHTML = ("Temperature is "+cvs.t1+" in "+cvs.u1);
+            });
 	
 	</script>
 </body>
